# umbrella-RTS

./: .gitignore  CMakeLists.txt  Makefile.Base  Readme.md  main.cpp  run.sh  setup.sh  sourcesGenerator.py  sourcesGenerator.sh
shaders/: basic.frag
src/: main.cpp
src/core/: Game.cpp  Game.h  InputManager.cpp  InputManager.h  Logger.h  ResourceManager.cpp  ResourceManager.h  Scene.h  SceneManager.cpp  SceneManager.h  Timer.cpp  Timer.h  UnitManager.cpp  UnitManager.h  Utils.cpp  Utils.h  logger.cpp
src/ecs/: Component.h  Entity.cpp  Entity.h  TransformComponent.h
src/ecs/components/: Component.h  MovementComponent.h  PositionComponent.h  SelectableComponent.h
src/ecs/systems/: MovementSystem.h  RenderSystem.h  SelectionSystem.h
src/game/: Game.cpp  Game.h
src/pathfinding/: AStar.cpp  AStar.h  Astar.cpp  Astar.h  Node.h
src/rendering/: Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  SpriteRenderer.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h
src/scenes/: MenuScene.cpp  MenuScene.h  SplashScene.cpp  SplashScene.h
